@@ -1,4 +1,5 @@
 1.3.0
+	improve logging for dspdebug
 	buffer audio when modem is in command-mode and process it when not
 	improve pty read speed
 	improve logging detail
